--- a/WarehouseEcommerce/Views/Theme/University/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_HorizontalNavbarPartial.cshtml
@@ -15,8 +15,9 @@
                         <a href="javascript:;">
                             @item.Name
                         </a>
+                        @{ var imagePath = !string.IsNullOrEmpty(item.Image) ? ViewBag.BaseFilePath + item.Image : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif";}
                         <div class="mega_nav_wrap">
-                            <div class="mega_nav_wrap_inner">
+                            <div class="mega_nav_wrap_inner" style="background-image:url(@imagePath)">
                                 <h3 class="head">@item.Name</h3>
                                 <ul class="meganav_firstcatList">
                                     @{int i = 1;}
@@ -172,7 +173,13 @@
                             @item.Name
                         </a>
                         <div class="mega_nav_wrap">
-                            <div class="mega_nav_wrap_inner">
+                            @{ var imagePath = !string.IsNullOrEmpty(item.Image) ? ViewBag.BaseFilePath + item.Image : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif";}
+                            <style>
+                                #category-@item.Name:before {
+                                    background-image:url(@imagePath)
+                                }
+                            </style>
+                            <div class="mega_nav_wrap_inner" id="category-@item.Name">
                                 <h3 class="head">@item.Name</h3>
                                 <ul class="meganav_firstcatList">
                                     @{int i = 1;}
@@ -246,59 +253,59 @@
 
 
             @*<li>
-                <a href="">
-                    New
-                </a>
-            </li>
-            <li class="hav_mega_nav">
-                <a href="listingpage.html">
-                    Clothing
-                </a>
-                <div class="mega_nav_wrap">
-                    <div class="mega_nav_wrap_inner">
-                        <h3 class="head">Clothing</h3>
-                        <ul class="meganav_firstcatList">
-                            <li data-image-nav-src="~/Content/Theme/University/app/images/meganavimg_mens.jpg">
-                                <a href="@Url.Action("list", "Product")">
-                                    Men
-                                </a>
-                            </li>
-                            <li>
-                                <a href="listingpage.html">
-                                    Women
-                                </a>
-                                <ul class="subList">
-                                    <li><a href="#">Jogging Bottom</a></li>
-                                    <li><a href="#">Zip Performance Top</a></li>
-                                    <li><a href="#">Jogging Shorts</a></li>
-                                    <li><a href="#">T-Shirts</a></li>
-                                    <li><a href="#">Leggings </a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="listingpage.html">
-                                    Accessories
-                                </a>
-                            </li>
-                        </ul>
+                    <a href="">
+                        New
+                    </a>
+                </li>
+                <li class="hav_mega_nav">
+                    <a href="listingpage.html">
+                        Clothing
+                    </a>
+                    <div class="mega_nav_wrap">
+                        <div class="mega_nav_wrap_inner">
+                            <h3 class="head">Clothing</h3>
+                            <ul class="meganav_firstcatList">
+                                <li data-image-nav-src="~/Content/Theme/University/app/images/meganavimg_mens.jpg">
+                                    <a href="@Url.Action("list", "Product")">
+                                        Men
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="listingpage.html">
+                                        Women
+                                    </a>
+                                    <ul class="subList">
+                                        <li><a href="#">Jogging Bottom</a></li>
+                                        <li><a href="#">Zip Performance Top</a></li>
+                                        <li><a href="#">Jogging Shorts</a></li>
+                                        <li><a href="#">T-Shirts</a></li>
+                                        <li><a href="#">Leggings </a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="listingpage.html">
+                                        Accessories
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <a href="listingpage.html">
-                    Sportwear
-                </a>
-            </li>
-            <li>
-                <a href="listingpage.html">
-                    Merchandise
-                </a>
-            </li>
-            <li>
-                <a href="listingpage.html">
-                    Graduation
-                </a>
-            </li>*@
+                </li>
+                <li>
+                    <a href="listingpage.html">
+                        Sportwear
+                    </a>
+                </li>
+                <li>
+                    <a href="listingpage.html">
+                        Merchandise
+                    </a>
+                </li>
+                <li>
+                    <a href="listingpage.html">
+                        Graduation
+                    </a>
+                </li>*@
         }
     </ul>
 </nav>
