--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SliderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SliderPartial.cshtml
@@ -16,11 +16,8 @@
                              alt=" @item.ImageAltTag" />
                         <div class="np_bannerContentOuter">
                             <div class="nb_bannerCaptionWrap">
-                                <h5>
-                                    @item.Text
-                                </h5>
-
-                                <button>@item.ButtonText</button>
+                                <h5>@item.Text</h5>
+                                <a href="@item.ButtonLinkUrl">@item.ButtonText</a>
                             </div>
                         </div>
                     </div>
@@ -36,8 +33,7 @@
                                 <h5>
                                     @item.Text
                                 </h5>
-
-                                <button>@item.ButtonText</button>
+                                <a href="@item.ButtonLinkUrl">@item.ButtonText</a>
                             </div>
                         </div>
                     </div>
