--- a/WMS/Views/Theme/Default/ProductTags/Create.cshtml
+++ b/WMS/Views/Theme/Default/ProductTags/Create.cshtml
@@ -82,7 +82,7 @@
         <div class="input-group h-100 justify-content-center align-items-center">
             <div class="col-md-offset-2 col-md-10 bottom-right">
                 <input type="submit" value="Create" class="btn btn-primary" />
-                <div class="back-list">@Html.ActionLink("Back to List", "Index", new { @class = "btn btn-default" })</div>
+                <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
             </div>
         </div>
     </div>
