--- a/WarehouseEcommerce/Content/Theme/University/UniversityCustomStyle.css
+++ b/WarehouseEcommerce/Content/Theme/University/UniversityCustomStyle.css
@@ -3,70 +3,80 @@
     top: 0;
     z-index: 999;
 }
-.prd_lst_boxouter .imagewrap  img{
-    width:235px;
-    height:235px;
+
+.prd_lst_boxouter .imagewrap img {
+    width: 235px;
+    height: 235px;
 }
+
 .prdimgsec .prdimg img {
     width: 80px;
     height: 80px;
 }
+
 .uni-pages-pt {
-    padding-top: 155px!important;
+    padding-top: 163px !important;
 }
-    .uni-get-address-page .uni-add-new-address-h4 {
-        font-weight: bold;
-        margin-bottom: 12px;
-    }
+
+.uni-get-address-page .uni-add-new-address-h4 {
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+
 .uni-pages-main .nb_feat_prod_sec .prd_amnt {
-white-space: nowrap;
+    white-space: nowrap;
 }
+
 .uni-pages-main .nb_feat_prod_sec .prd_name {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     margin-bottom: unset;
 }
+
 .uni-pages-main .nb_prd_filterwrap .list-group-item {
     display: flex;
     align-items: center;
 }
-.uni-pages-main .nb_prd_filterwrap .list-group-item input {
-    margin-right: 6px;
-    margin-top: unset;
-    width: 18px;
-    height: 18px;
-}
-.uni-pages-main .nb_header_btm_beedsec {
-    margin-top: -21px;
-    font-family: "primaryfont_SemiBold";
-}
+
+    .uni-pages-main .nb_prd_filterwrap .list-group-item input {
+        margin-right: 6px;
+        margin-top: unset;
+        width: 18px;
+        height: 18px;
+    }
+
 .uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a i {
     margin-right: unset;
 }
+
 .uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a:hover > .uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a i {
     color: #f33655;
 }
+
 .uni-pages-main .nb_sec_navwrap .nb_sec_navlist li a {
     pointer-events: none;
     cursor: default;
 }
 
 .uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .nb_bread_crumbwrap nav ol li:before {
-    content:"";
+    content: "";
 }
+
 .uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .nb_bread_crumbwrap .breadcrumb > li:after {
     top: 7px;
     right: -4px;
     width: 7px;
     height: 7px;
 }
+
 .uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .sortBysec select {
     -webkit-appearance: none;
     -moz-appearance: none;
     text-indent: 1px;
     text-overflow: '';
 }
+
     .uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec .sortBysec select:focus {
         border-color: #495057;
         border-radius: unset;
@@ -75,6 +85,17 @@ white-space: nowrap;
 .uni-pages-main .nb_prdlisting_pgsec .breadCrumbtopsec {
     font-family: "primaryfont_SemiBold";
 }
+
 .uni-pages-main .nb_prd_filterwrap {
     font-family: "primaryfont_SemiBold";
+}
+
+.modal-dialog {
+    font-family: "primaryfont_SemiBold";
+}
+
+.modal-title {
+    font-family: "primaryfont_SemiBold";
+    font-weight: bold;
+    font-size: 20px;
 }
