--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
@@ -73,6 +73,7 @@
         <div class="spinner">
             <div class="double-bounce1"></div>
             <div class="double-bounce2"></div>
+            <div class="double-bounce2"></div>
         </div>
     </div>
     @Html.Action("_TopHeaderPartial", "Home")
