changes regarding wishlist, average and logout resolved Imported from Changeset 2526

--- a/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
@@ -140,7 +140,10 @@
                                                     </li>
 
                                                 }
-                                                @if (item.WebsiteWishListItems.Where(u => u.IsDeleted != true).ToList().Count <= 0)
+                                                @{
+                                                    var totaltems = item.WebsiteWishListItems.Where(u => u.IsDeleted != true && u.UserId== ViewBag.CurrentUserId).ToList();
+                                                }
+                                                @if (totaltems.Count <= 0)
                                                 {
 
 
