--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
     <script type="text/javascript">
         var basePath = '@ViewBag.BasePath';
         var baseFilePath = '@ViewBag.BaseFilePath';
+        var userStatus = '@ViewBag.LoginDetail';
     </script>
 
 
